// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty basic.tsx 1`] = `
<div>
  <div
    style="display: flex; justify-content: space-around; align-items: center;"
  >
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 24px; height: 24px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无数据
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 24px; height: 24px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无数据
        </div>
        <button
          class="ant-btn ant-btn-link ant-btn-sm"
          type="button"
        >
          <span>
            去添加
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty button.tsx 1`] = `
<div>
  <div
    class="ant-row ant-row-space-around"
  >
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          描述性文本或状态，提供建议或引导
        </div>
        <div
          class="ms-empty-btn"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-sm"
            type="button"
          >
            <span>
              主要按钮
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          描述性文本或状态，提供建议或引导
        </div>
        <div
          class="ms-empty-btn"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-sm"
            type="button"
          >
            <span>
              次要按钮
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          描述性文本或状态，提供建议或引导
        </div>
        <div
          class="ms-empty-btn"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-sm"
            type="button"
          >
            <span>
              次要按钮
            </span>
          </button>
          <button
            class="ant-btn ant-btn-primary ant-btn-sm"
            type="button"
          >
            <span>
              主要按钮
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty custom.tsx 1`] = `
<div>
  <div
    style="display: flex; justify-content: space-around; align-items: center; flex-wrap: wrap;"
  >
    <div
      class="ant-empty ant-empty-normal ms-empty "
    >
      <div
        class="ant-empty-image"
      >
        <svg
          class="ant-empty-img-simple"
          height="41"
          viewBox="0 0 64 41"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            transform="translate(0 1)"
          >
            <ellipse
              class="ant-empty-img-simple-ellipse"
              cx="32"
              cy="33"
              rx="32"
              ry="7"
            />
            <g
              class="ant-empty-img-simple-g"
              fill-rule="nonzero"
            >
              <path
                d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
              />
              <path
                class="ant-empty-img-simple-path"
                d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无数据
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
      >
        <span
          class="anticon"
          role="img"
          style="font-size: 50px;"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              xlink:href="#icon-ram-permission"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无数据
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 50px; height: 50px;"
      >
        <img
          alt=""
          src="http://doc.msxf.local/service/img/getImg/doc/doc/img/1838032857517490177/1.png"
        />
      </div>
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty demo7.tsx 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-body"
      style="padding: 20px;"
    >
      <div
        class="ms-page"
      >
        <div
          class="ms-title-container"
        >
          <div
            class="ms-title"
          >
            <div
              class="ms-title-prefix"
            >
              <a
                class="ms-page-back-btn"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  color="#1890ff"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </a>
            </div>
            <h3
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ms-title-text ms-title-x-large"
            >
              标题
            </h3>
          </div>
          <div
            class="ms-title-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ms-actions"
            />
          </div>
        </div>
        <div>
          <div
            class="ant-select ant-select-single ant-select-show-arrow"
            style="width: 200px;"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                请选择
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-empty ms-empty "
          >
            <div
              class="ant-empty-image"
              style="width: 120px; height: 106px;"
            />
            <div
              class="ant-empty-footer"
            >
              <div
                class="ms-empty-title"
              >
                描述性标题
              </div>
              <div
                class="ms-empty-desc"
              >
                描述性文本或状态，提供建议或引导
                <span
                  style="color: rgb(0, 110, 255); cursor: pointer;"
                >
                  去创建
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty image.tsx 1`] = `
<div>
  <div
    style="display: flex; justify-content: space-around; align-items: center; flex-wrap: wrap;"
  >
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          创建
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无权限
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无内容
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          选择
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          搜索为空
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty other.tsx 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-body"
      style="padding: 20px;"
    >
      <div
        class="ms-page"
      >
        <div
          class="ms-title-container"
        >
          <div
            class="ms-title"
          >
            <div
              class="ms-title-prefix"
            >
              <a
                class="ms-page-back-btn"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  color="#1890ff"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </a>
            </div>
            <h3
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ms-title-text ms-title-x-large"
            >
              标题
            </h3>
          </div>
          <div
            class="ms-title-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ms-actions"
            />
          </div>
        </div>
        <div
          class="ant-empty ms-empty "
        >
          <div
            class="ant-empty-image"
            style="width: 120px; height: 106px;"
          />
          <div
            class="ant-empty-footer"
          >
            <div
              class="ms-empty-title"
            >
              描述性标题
            </div>
            <div
              class="ms-empty-desc"
            >
              描述性文本或状态，提供建议或引导
              <span
                style="color: rgb(0, 110, 255); cursor: pointer;"
              >
                去创建
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty size.tsx 1`] = `
<div>
  <div
    style="display: flex; justify-content: space-around; align-items: center; flex-wrap: wrap;"
  >
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 180px; height: 160px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无权限(大尺寸 180*160)
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无权限(默认尺寸 120*106)
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 90px; height: 80px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无权限(小尺寸 90*80)
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 300px; height: 300px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-desc"
        >
          暂无权限(自定义尺寸)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsEmpty 组件 demo 测试 正确渲染 MsEmpty title.tsx 1`] = `
<div>
  <div
    class="ant-row ant-row-space-around"
  >
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-title"
        >
          标题
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-title"
        >
          标题
        </div>
        <div
          class="ms-empty-desc"
        >
          描述性文本或状态
        </div>
      </div>
    </div>
    <div
      class="ant-empty ms-empty "
    >
      <div
        class="ant-empty-image"
        style="width: 120px; height: 106px;"
      />
      <div
        class="ant-empty-footer"
      >
        <div
          class="ms-empty-title"
        >
          标题
        </div>
        <div
          class="ms-empty-desc"
        >
          描述性文本或状态，提供建议或引导
           
          <span
            style="color: rgb(0, 110, 255); cursor: pointer;"
          >
            去创建
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
